<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>edu.francis.my</groupId>
	<artifactId>SFU-PA-Project</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>SFU PA Project</name>
	<description>Project for PA Program</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/> 
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<javafx.version>21.0.6</javafx.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.akathist.maven.plugins.launch4j</groupId>
			<artifactId>launch4j-maven-plugin</artifactId>
			<version>2.5.3</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-community-dialects</artifactId>
			<version>6.4.1.Final</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.7.1</version>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.49.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.10.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>edu.francis.my.sfupa.HelloFXApplication</mainClass>
					<jvmArguments>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens java.base/java.io=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
					</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


			<!-- JavaFX Maven Plugin -->

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>edu.francis.my.sfupa.HelloFXApplication</mainClass>
					<launcher>sfupa</launcher>
					<jlinkImageName>sfupa-runtime</jlinkImageName>
					<jlinkZipName>sfupa-runtime-zip</jlinkZipName>
					<options>
						<option>--add-modules</option>
						<option>javafx.controls,javafx.fxml</option>
						<option>--add-exports</option>
						<option>java.base/java.lang=ALL-UNNAMED</option>
						<option>--enable-native-access=ALL-UNNAMED</option>
					</options>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<descriptors>
						<descriptor>src/assembly/distribution.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.5.0</version>
				<executions>
					<execution>
						<id>create-executable</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<jar>${project.build.directory}/${project.build.finalName}.jar</jar>
					<outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>
					<dontWrapJar>false</dontWrapJar>
					<headerType>gui</headerType>
					<chdir>.</chdir>
					<jre>
						<minVersion>17.0.0</minVersion>
						<requires64Bit>true</requires64Bit>
						<opts>
							<opt>-Djava.library.path=./lib</opt>
							--add-exports java.base/sun.misc=ALL-UNNAMED
							--add-opens java.base/java.lang=ALL-UNNAMED
							--add-opens java.base/java.lang.reflect=ALL-UNNAMED
							--add-opens java.base/java.io=ALL-UNNAMED
							--add-opens java.base/java.util=ALL-UNNAMED
							--add-opens java.base/java.util.concurrent=ALL-UNNAMED
							--add-opens java.base/java.nio=ALL-UNNAMED
							--enable-native-access=ALL-UNNAMED
							-Dprism.marlin.log=false
							-Dsun.misc.Unsafe.skipWarnings=true
						</opts>
					</jre>
					<versionInfo>
						<fileVersion>0.0.1.0</fileVersion>
						<txtFileVersion>${project.version}</txtFileVersion>
						<fileDescription>${project.name}</fileDescription>
						<copyright>SFU PA Program 2025</copyright>
						<productVersion>0.0.1.0</productVersion>
						<txtProductVersion>${project.version}</txtProductVersion>
						<productName>${project.name}</productName>
						<internalName>${project.artifactId}</internalName>
						<originalFilename>${project.build.finalName}.exe</originalFilename>
						<companyName>SFU</companyName>
					</versionInfo>
				</configuration>
			</plugin>






		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version> 
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
